2005-08-19  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_poll_dnotify.c: (gam_poll_dnotify_scan_callback): Sprinkle in
	some asserts.

2005-08-19  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_poll_basic.c: (gam_poll_basic_poll_file),
	(gam_poll_basic_scan_callback): Fix another crasher.

2005-08-19  John McCutchan  <ttb@tentacle.dhs.org>

	* TODO: Clarify a TODO item.
	* lib/gam_error.c: (gam_error_handle_signal), (gam_error_signal),
	(gam_error_init), (gam_error_check), (gam_errno), (gam_error),
	(gam_debug): Fix a bug in starting up /tmp/gamin debug stream.
	* server/gam_poll_generic.c:
	(gam_poll_generic_scan_directory_internal): Fix crasher.

2005-08-19  John McCutchan  <ttb@tentacle.dhs.org>

	Patch from TomPh <tpgww@onepost.net>

	* configure.in: Properly define HAVE_LINUX when configured with
	--disable-kernel. Clear up build options. debug & debug-api disabled by
	default unless CVS directory exists. Use -Ox optimization only when -g is not
	used.
	* server/Makefile.am: make some _SOURCES conditional on ENABLE_INOTIFY &
	ENABLE_DNOTIFY.

2005-08-18  John McCutchan <ttb@tentacle.dhs.org>

	* python/tests/basic4.py: show callback debug
	* server/gam_inotify.c: (gam_inotify_init): Enable the basic poll
	backend. The basic backend will be used for paths/filesystems marked
	as poll when inotify is enabled
	* server/gam_poll_basic.c: (gam_poll_basic_init),
	(gam_poll_basic_poll_file), (gam_poll_basic_scan_callback):
	* server/gam_poll_generic.c:
	(gam_poll_generic_scan_directory_internal): Bug fixes to poll
	backends. 

2005-08-17  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_add_subscription),
	(gam_inotify_remove_subscription), (gam_inotify_nolonger_missing),
	(gam_inotify_nolonger_link), (gam_inotify_add_link),
	(gam_inotify_scan_links), (gam_inotify_stat_changed),
	(gam_inotify_poll_link): Redo link handling. This should work around the
	race. Also fixed some real bugs in the last iteration.
